--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@tailwindcss/typography": "^0.5.10",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "heroicons": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
