--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
+    "bcrypt": "^5.1.1",
     "chalk": "^4.1.2",
     "cliui": "^8.0.1",
     "color-convert": "^2.0.1",
@@ -13,6 +14,7 @@
     "date-fns": "^2.30.0",
     "emoji-regex": "^8.0.0",
     "escalade": "^3.1.1",
+    "express-validator": "^7.0.1",
     "get-caller-file": "^2.0.5",
     "has-flag": "^4.0.0",
     "is-fullwidth-code-point": "^3.0.0",
@@ -39,8 +41,7 @@
     "start": "concurrently \"npm run start-client\" \"npm run start-server\"",
     "start-client": "cd client && npm run dev",
     "start-server": "cd server && npm start"
-  }
-  ,
+  },
   "author": "",
   "license": "ISC"
 }
