--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@tailwindcss/typography": "^0.5.10",
+    "axios": "^1.6.4",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "heroicons": "^2.1.1",
