--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cliui": "^8.0.1",
     "color-convert": "^2.0.1",
     "color-name": "^1.1.4",
+    "cookie-session": "^2.0.0",
     "date-fns": "^2.30.0",
     "emoji-regex": "^8.0.0",
     "escalade": "^3.1.1",
